test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_struct_full_expr.plx
type struc s;

extrn x: struc s;

pub fn main(none) i32 {
    #  can't use expression w/ incomplete struct type as expression statement
    loop x {
        ;
    }
    return 0
}
